# wip

./: .gitignore  README.md  pyproject.toml
src/wip/: cli.py  gist.py  iterm2.py  model.py  render.py  render_md.py  storage.py
tests/: conftest.py  test_cli_active.py  test_cli_add.py  test_cli_block.py  test_cli_config.py  test_cli_done.py  test_cli_gone.py  test_cli_link.py  test_cli_reset.py  test_cli_save_load.py  test_gist.py  test_model.py  test_render_md.py  test_share.py  test_storage.py
