[project]
name = "wip"
version = "0.1.0"
description = "A CLI tool for managing tasks as a DAG with ASCII visualization"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.3.1",
    "rich>=13.0.0",
]

[project.scripts]
wip = "wip.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wip"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
